refactor: 优化了若干代码