@@ -1,12 +1,15 @@
 package com.jiaruiblog.service.impl;
 
+import com.jiaruiblog.convert.TagConvert;
 import com.jiaruiblog.entity.FileDocument;
 import com.jiaruiblog.entity.Tag;
 import com.jiaruiblog.entity.TagDocRelationship;
 import com.jiaruiblog.entity.vo.CateOrTagVO;
 import com.jiaruiblog.entity.vo.TagVO;
+import com.jiaruiblog.exception.BusinessException;
+import com.jiaruiblog.exception.ErrorCode;
 import com.jiaruiblog.repository.TagRepository;
-import com.jiaruiblog.service.IFileService;
+import com.jiaruiblog.service.DocumentService;
 import com.jiaruiblog.service.TagService;
 import com.mongodb.client.result.DeleteResult;
 import jakarta.annotation.Resource;
@@ -16,13 +19,11 @@ import org.apache.commons.compress.utils.Lists;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.data.domain.Sort;
-import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.aggregation.Aggregation;
 import org.springframework.data.mongodb.core.aggregation.AggregationResults;
 import org.springframework.data.mongodb.core.aggregation.ConvertOperators;
 import org.springframework.data.mongodb.core.query.Criteria;
 import org.springframework.data.mongodb.core.query.Query;
-import org.springframework.data.mongodb.core.query.Update;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
@@ -45,7 +46,7 @@ public class TagServiceImpl implements TagService {
     private static final String COLLECTION_NAME = "tagCollection";
 
     public static final String RELATE_COLLECTION_NAME = "relateTagCollection";
-    
+
     private static final String FILE_ID = "fileId";
 
     private static final String TAG_ID = "tagId";
@@ -55,44 +56,49 @@ public class TagServiceImpl implements TagService {
     private static final String OBJECT_ID = "_id";
 
 
-    private IFileService fileService;
+    private DocumentService fileService;
 
     @Autowired
     TagRepository tagRepository;
 
+    @Resource
+    TagConvert tagConvert;
+
     // 通过属性注入，防止循环依赖
     @Autowired
-    private void setFileService(IFileService iFileService) {
-        this.fileService = iFileService;
+    private void setFileService(DocumentService documentService) {
+        this.fileService = documentService;
     }
 
+    /***
+     * <p>插入全新的标签数据</p>
+     * @param tag 待插入的标签
+     **/
     @Override
     public void insert(Tag tag) {
         // 必须经过查重啊
-        if(isTagExist(tag.getName())) {
-            return ;
+        if (isTagExist(tag.getName())) {
+            throw new BusinessException(ErrorCode.TAG_EXISTS);
         }
-        mongoTemplate.save(tag, COLLECTION_NAME);
+        tagRepository.save(tag);
     }
-    
-    /**
-     * @author luojiarui
-     * @Description 更新tag的信息
-     * @Date 16:55 2022/9/3
-     * @Param [tag]
-     * @return com.jiaruiblog.utils.ApiResult
+
+    /***
+     * <p>更新标签数据</p>
+     * @param tag 准备更新的标签
+
      **/
     @Override
     public void update(Tag tag) {
         // 必须经过查重啊
-        if(isTagExist(tag.getName())) {
-            return;
+        List<Tag> tags = queryTagByName(tag.getName());
+        long count = tags.stream()
+                .filter(item -> !Objects.equals(item.getId(), tag.getId()) && item.getName().equals(tag.getName()))
+                .count();
+        if (count > 0) {
+            throw new BusinessException(ErrorCode.TAG_EXISTS);
         }
-        Query query = new Query(Criteria.where(OBJECT_ID).is(tag.getId()));
-        Update update  = new Update();
-        update.set("name", tag.getName());
-        update.set("updateTime",tag.getUpdateDate());
-        tagRepository.update(query, update);
+        tagRepository.update(tag);
     }
 
     @Override
@@ -106,7 +112,7 @@ public class TagServiceImpl implements TagService {
         }
         List<Tag> existedTags = queryTagListByNameList(tags.toArray(new String[0]));
         List<String> existedTagIdList = existedTags.stream().map(Tag::getId).collect(Collectors.toList());
-        List<String> existedTagNameList = existedTags.stream().map(Tag::getName).collect(Collectors.toList());
+        List<String> existedTagNameList = existedTags.stream().map(Tag::getName).toList();
         tags.removeAll(existedTagNameList);
         List<String> newTagNameList = tags;
 
@@ -120,54 +126,39 @@ public class TagServiceImpl implements TagService {
             newTags.add(tag);
         }
         Collection<Tag> insertedTags = tagRepository.saveAll(newTags);
-        List<String> newTagIdList = insertedTags.stream().map(Tag::getId).collect(Collectors.toList());
+        List<String> newTagIdList = insertedTags.stream().map(Tag::getId).toList();
         existedTagIdList.addAll(newTagIdList);
         return existedTagIdList;
     }
 
     /**
      * @author luojiarui
-     * @Description 删除某个已经存在的tag信息
-     * @Date 16:55 2022/9/3
-     * @Param [tag]
-     * @return com.jiaruiblog.utils.ApiResult
+     *  删除某个已经存在的tag信息
      **/
     @Override
     public void remove(Tag tag) {
-        if(tag == null || !StringUtils.hasText(tag.getId())) {
-            return;
-        }
-        Query query1 = new Query();
-        query1.addCriteria(Criteria.where(OBJECT_ID).is(tag.getId()));
-        tagRepository.delete(query1, Tag.class, COLLECTION_NAME);
-
-        // 同时去除掉各种关系的数据
-        Query query = new Query(Criteria.where(TAG_ID).is(tag.getId()));
-        tagRepository.delete(query, TagDocRelationship.class, RELATE_COLLECTION_NAME);
+        tagRepository.delete(tag);
     }
 
     /**
      * 根据文档的id查询tag数量
+     *
      * @param tag 标签
      * @return BaseApiResult
      */
     @Override
     public TagVO queryById(Tag tag) {
-        Query query = new Query(Criteria.where("_").is("1"));
-        tagRepository.count(query, Tag.class);
-        return new TagVO();
+        Tag tag1 = tagRepository.findById(tag.getId());
+        return tagConvert.convertToVO(tag1);
     }
 
     /**
-     * @author luojiarui
-     * @Description 根据tag的id查询全部的tag列表
-     * @Date 22:13 2022/9/17
-     * @Param [tagIds]
      * @return java.util.List<com.jiaruiblog.entity.Tag>
+     * @author luojiarui
+     * 根据tag的id查询全部的tag列表
      **/
     public List<Tag> queryByIds(List<String> tagIds) {
-        Query query = new Query(Criteria.where(OBJECT_ID).in(tagIds));
-        return Optional.of(tagRepository.find(query, Tag.class, COLLECTION_NAME)).orElse(Lists.newArrayList());
+        return tagRepository.findByIds(tagIds);
     }
 
     @Override
@@ -175,7 +166,10 @@ public class TagServiceImpl implements TagService {
         return null;
     }
 
-
+    /***
+     * <p>查询全部的标签信息</p>
+     *
+     **/
     @Override
     public List<CateOrTagVO> list() {
         Aggregation aggregation = Aggregation.newAggregation(
@@ -198,59 +192,50 @@ public class TagServiceImpl implements TagService {
     }
 
     /**
-     * @author luojiarui
-     * @Description // 根据id进行检索
-     * @Date 11:15 下午 2022/6/22
-     * @Param [id]
      * @return com.jiaruiblog.entity.Tag
+     * @author luojiarui
      **/
     @Override
     public Tag queryByTagId(String id) {
-        if( !StringUtils.hasText(id)) {
-            return null;
+        if (!StringUtils.hasText(id)) {
+            throw new BusinessException(ErrorCode.TAG_NOT_FOUND);
         }
         return tagRepository.findById(id);
     }
 
     /**
-     *
      * @param relationship 关系对象
-     * @return BaseApiResult
      */
     @Override
     public void addRelationShip(TagDocRelationship relationship) {
-        if( relationship == null || !StringUtils.hasText(relationship.getTagId())) {
-            return ;
+        if (relationship == null || !StringUtils.hasText(relationship.getTagId())) {
+            return;
         }
         // 判断以下是否存在这个关系
         Query query = new Query(Criteria.where(TAG_ID).is(relationship.getTagId())
                 .and(FILE_ID).is(relationship.getFileId()));
-        if(tagRepository.relationshipExists(query)) {
-            return ;
+        if (tagRepository.relationshipExists(query)) {
+            return;
         }
         tagRepository.saveRelationship(relationship);
     }
 
     @Override
     public void cancelTagRelationship(TagDocRelationship relationship) {
-        Query query = new Query(Criteria.where(TAG_ID).is(relationship.getTagId())
-                .and(FILE_ID).is(relationship.getFileId()));
-        tagRepository.deleteRelationships(query);
+        tagRepository.deleteRelationships(relationship);
     }
 
     /**
      * 备用query 语句 // Query query1 = new Query().addCriteria(Criteria.where("_id").is(relationship.getTagId()));
-     * @author luojiarui
-     * @Description // 根据文档的信息找到全部的tag信息
-     * @Date 11:05 下午 2022/6/22
-     * @Param [id]
+     *
      * @return java.util.List<com.jiaruiblog.entity.vo.TagVO>
+     * @author luojiarui
+     * 根据文档的信息找到全部的tag信息
      **/
     @Override
     public List<TagVO> queryByDocId(String id) {
         List<TagVO> tagVOList = new ArrayList<>();
-        Query query = new Query().addCriteria(Criteria.where(FILE_ID).is(id));
-        List<TagDocRelationship> relationships = tagRepository.findRelationships(query);
+        List<TagDocRelationship> relationships = tagRepository.findRelationshipsByDocId(id);
 
         if (relationships.isEmpty()) {
             return tagVOList;
@@ -269,16 +254,14 @@ public class TagServiceImpl implements TagService {
     }
 
     /**
+     * @return java.util.Map<com.jiaruiblog.entity.Tag, java.util.List < com.jiaruiblog.entity.TagDocRelationship>>
      * @author luojiarui
-     * @Description 查询最近的tag分页
-     * @Date 22:23 2022/9/17
-     * @Param []
-     * @return java.util.Map<com.jiaruiblog.entity.Tag,java.util.List<com.jiaruiblog.entity.TagDocRelationship>>
+     * 查询最近的tag分页
      **/
     public Map<Tag, List<TagDocRelationship>> getRecentTagRelationship(Integer tagNum) {
         Map<Tag, List<TagDocRelationship>> result = new HashMap<>();
         List<TagDocRelationship> files = getTagRelationshipByPage(0, tagNum, null);
-        if( CollectionUtils.isEmpty(files)) {
+        if (CollectionUtils.isEmpty(files)) {
             return result;
         }
         List<String> tagIds = files.stream().map(TagDocRelationship::getTagId).collect(Collectors.toList());
@@ -290,11 +273,9 @@ public class TagServiceImpl implements TagService {
     }
 
     /**
+     * @return java.util.Map<com.jiaruiblog.entity.Tag, java.util.List < com.jiaruiblog.entity.TagDocRelationship>>
      * @author luojiarui
-     * @Description 默认查询两个最近的tag
-     * @Date 22:24 2022/9/17
-     * @Param []
-     * @return java.util.Map<com.jiaruiblog.entity.Tag,java.util.List<com.jiaruiblog.entity.TagDocRelationship>>
+     * 默认查询两个最近的tag
      **/
     @Override
     public Map<Tag, List<TagDocRelationship>> getRecentTagRelationship() {
@@ -302,11 +283,9 @@ public class TagServiceImpl implements TagService {
     }
 
     /**
-     * @author luojiarui
-     * @Description 判断某个标签是否和文件存在关系
-     * @Date 22:22 2022/11/16
-     * @Param [tagId, fileId]
      * @return boolean
+     * @author luojiarui
+     * 某个标签是否和文件存在关系
      **/
     @Override
     public boolean relateExist(String tagId, String fileId) {
@@ -318,30 +297,26 @@ public class TagServiceImpl implements TagService {
     }
 
     /**
-     * @author luojiarui
-     * @Description 分页查询相关的关系列表
-     * 1、tagId 为null 的时候不进行tag相关检索；2、page和size 进行分页
-     * @Date 22:22 2022/9/17
-     * @Param [pageIndex, pageSize, tagId]
      * @return java.util.List<com.jiaruiblog.entity.TagDocRelationship>
+     * @author luojiarui
+     * 分页查询相关的关系列表
+     * 1、tagId 为null 的时候不进行tag相关检索；2、page和size 进行分页
      **/
-    public List<TagDocRelationship> getTagRelationshipByPage(int pageIndex, int pageSize,  String tagId) {
+    public List<TagDocRelationship> getTagRelationshipByPage(int pageIndex, int pageSize, String tagId) {
         Query query = new Query().with(Sort.by(Sort.Direction.DESC, "createDate"));
         long skip = (long) (pageIndex) * pageSize;
         query.skip(skip);
         query.limit(pageSize);
-        if ( tagId != null) {
+        if (tagId != null) {
             query.addCriteria(Criteria.where(TAG_ID).is(tagId));
         }
         return Optional.of(mongoTemplate.find(query, TagDocRelationship.class, RELATE_COLLECTION_NAME)).orElse(Lists.newArrayList());
     }
 
     /**
-     * @author luojiarui
-     * @Description // 根据tag的id 查询所有的相关的文档id列表
-     * @Date 11:19 下午 2022/6/22
-     * @Param [tagId]
      * @return java.util.List<java.lang.Long>
+     * @author luojiarui
+     * 根据tag的id 查询所有的相关的文档id列表
      **/
     @Override
     public List<String> queryDocIdListByTagId(String tagId) {
@@ -352,15 +327,16 @@ public class TagServiceImpl implements TagService {
 
     /**
      * 根据关键字模糊搜索相关的文档id
+     *
      * @param keyWord 关键字
      * @return 文档的id信息
      */
     @Override
     public List<String> fuzzySearchDoc(String keyWord) {
-        if( keyWord == null || "".equalsIgnoreCase(keyWord)) {
+        if (keyWord == null || "".equalsIgnoreCase(keyWord)) {
             return Lists.newArrayList();
         }
-        Pattern pattern = Pattern.compile("^.*"+keyWord+".*$", Pattern.CASE_INSENSITIVE);
+        Pattern pattern = Pattern.compile("^.*" + keyWord + ".*$", Pattern.CASE_INSENSITIVE);
         Query query = new Query();
         query.addCriteria(Criteria.where("name").regex(pattern));
         List<Tag> categories = mongoTemplate.find(query, Tag.class, COLLECTION_NAME);
@@ -377,6 +353,7 @@ public class TagServiceImpl implements TagService {
 
     /**
      * 判断某个tag名字是否已经存在？
+     *
      * @param tagName 标签名字
      * @return 布尔
      */
@@ -387,26 +364,25 @@ public class TagServiceImpl implements TagService {
 
     /**
      * 根据tag的名字检索tag信息
+     *
      * @param name tag 名称
      * @return 查询回来的tag列表
      */
     private List<Tag> queryTagByName(String name) {
-        if( !StringUtils.hasText(name) ) {
+        if (!StringUtils.hasText(name)) {
             return Lists.newArrayList();
         }
-        Query query = new Query().addCriteria(Criteria.where("name").is(name));
-        return mongoTemplate.find(query, Tag.class, COLLECTION_NAME);
+        return tagRepository.findByName(name);
     }
 
     /**
+     * @param name
+     * @return java.util.List<com.jiaruiblog.entity.Tag>
      * @author luojiarui
      * @Description 通过列表查询全部的标签信息
      * @Date 15:56 2023/4/22
      * @Param [name]
-     * @return java.util.List<com.jiaruiblog.entity.Tag>
-     *
-     * @param name
-     * */
+     */
     public List<Tag> queryTagListByNameList(String... name) {
         List<String> nameList = Arrays.asList(name);
         if (CollectionUtils.isEmpty(nameList)) {
@@ -429,11 +405,11 @@ public class TagServiceImpl implements TagService {
     }
 
     /**
+     * @return java.lang.Integer
      * @author luojiarui
      * @Description // 统计总数
      * @Date 4:40 下午 2022/6/26
      * @Param []
-     * @return java.lang.Integer
      **/
     @Override
     public long countAllFile() {
@@ -449,7 +425,7 @@ public class TagServiceImpl implements TagService {
     @Async
     @Override
     public void saveTagWhenSaveDoc(FileDocument fileDocument) {
-        if(fileDocument == null || !StringUtils.hasText(fileDocument.getSuffix())) {
+        if (fileDocument == null || !StringUtils.hasText(fileDocument.getSuffix())) {
             return;
         }
         String suffix = fileDocument.getSuffix();
@@ -462,7 +438,7 @@ public class TagServiceImpl implements TagService {
         List<Tag> tags = queryTagByName(tagName.toUpperCase(Locale.ROOT));
         Tag tag;
 
-        if(CollectionUtils.isEmpty(tags)) {
+        if (CollectionUtils.isEmpty(tags)) {
             tag = new Tag();
             tag.setName(tagName.toUpperCase(Locale.ROOT));
             tag.setCreateDate(new Date());
@@ -487,15 +463,12 @@ public class TagServiceImpl implements TagService {
 
     /**
      * @author luojiarui
-     * @Description 批量保存数据
-     * @Date 17:05 2023/4/22
-     * @Param [tags, docIds]
-     * @return void
+     * 批量保存数据
      **/
     @Override
     @Async
     public void addTagRelationShip(List<String> tags, List<String> docIds) {
-        for(String docId : docIds) {
+        for (String docId : docIds) {
             for (String tag : tags) {
                 if (tag == null) {
                     continue;
